fixed routes in swagger
