# src/routes/issueRoutes.js
@@ -3,31 +3,38 @@ const router = express.Router();
 const issueController = require('../controllers/issueController');
 const { ensureAuthenticated } = require('../middleware/authMiddleware');
 
-// #swagger.tags = ['Issues']
-
-// GET all issues
-// #swagger.description = 'Retrieve all comic book issues from the vault.'
-router.get('/', issueController.getAllIssues);
+router.get('/', 
+    /* #swagger.tags = ['Issues']
+    #swagger.path = '/api/issues'
+    */
+    issueController.getAllIssues);
 
 // GET a single issue by ID
-// #swagger.description = 'Get details of a specific issue using its unique ID.'
-router.get('/:id', issueController.getIssueById);
+router.get('/:id', 
+    /* #swagger.tags = ['Issues']
+    #swagger.path = '/api/issues'
+    */
+    issueController.getIssueById);
 
 // POST a new issue
-// #swagger.description = 'Add a new comic book issue to the database.'
-/* #swagger.parameters['obj'] = {
-    in: 'body',
-    description: 'Issue Information',
-    schema: { $ref: '#/definitions/Issue' }
-} */
-router.post('/', ensureAuthenticated, issueController.createIssue);
+router.post('/', 
+    /* #swagger.tags = ['Issues']
+    #swagger.path = '/api/issues'
+    */
+    ensureAuthenticated, issueController.createIssue);
 
 // PUT (Update) an existing issue
-// #swagger.description = 'Update the details of an existing issue.'
-router.put('/:id', ensureAuthenticated, issueController.updateIssue);
+router.put('/:id',
+    /* #swagger.tags = ['Issues']
+    #swagger.path = '/api/issues'
+    */
+    ensureAuthenticated, issueController.updateIssue);
 
 // DELETE an issue
-// #swagger.description = 'Remove an issue from the vault permanently.'
-router.delete('/:id', ensureAuthenticated, issueController.deleteIssue);
+router.delete('/:id', 
+    /* #swagger.tags = ['Issues']
+    #swagger.path = '/api/issues'
+    */
+    ensureAuthenticated, issueController.deleteIssue);
 
 module.exports = router;
